<resources>
    <string name="app_name">Rick\'s Content Retriever</string>
    <string name="action_ascending">sort ascending</string>
    <string name="action_descending">sort descending</string>
    <string name="action_testdata">load test data</string>
</resources>
